Experimental fix to prevent scroll to top button from going out of container

--- a/v2/src/styles/components/_buttons.scss
+++ b/v2/src/styles/components/_buttons.scss
@@ -12,4 +12,8 @@
 	z-index: 5;
 	cursor: pointer;
 	color: colors.$black;
+
+	@media (max-width: 400px) {
+		right: 3rem;
+	}
 }
